--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "recognise-git-action",
+  "version": "1.0.0",
+  "main": "server.js", 
+  "scripts": {
+    "start": "node server.js" 
+  },
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
     "mongoose": "^8.6.3"
   }
 }
+
+
+
+
